@@ -3701,3 +3701,4 @@
 ( cvs diff -u -r 1.60.2.128 -r 1.60.2.129 src/addressbook.c;  cvs diff -u -r 1.382.2.494 -r 1.382.2.495 src/compose.c;  cvs diff -u -r 1.26.2.41 -r 1.26.2.42 src/foldersel.c;  cvs diff -u -r 1.115.2.218 -r 1.115.2.219 src/main.c;  cvs diff -u -r 1.274.2.295 -r 1.274.2.296 src/mainwindow.c;  cvs diff -u -r 1.28.2.44 -r 1.28.2.45 src/mbox.c;  cvs diff -u -r 1.2.2.6 -r 1.2.2.7 src/common/md5.c;  cvs diff -u -r 1.4.2.35 -r 1.4.2.36 src/common/ssl_certificate.c;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/common/tags.c;  cvs diff -u -r 1.36.2.163 -r 1.36.2.164 src/common/utils.c;  cvs diff -u -r 1.1.4.107 -r 1.1.4.108 src/etpan/imap-thread.c;  cvs diff -u -r 1.1.2.39 -r 1.1.2.40 src/plugins/bogofilter/bogofilter.c;  cvs diff -u -r 1.1.2.42 -r 1.1.2.43 src/plugins/pgpinline/pgpinline.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/plugins/smime/smime.c;  ) > 3.7.0cvs37.patchset
 ( cvs diff -u -r 1.115.2.219 -r 1.115.2.220 src/main.c;  cvs diff -u -r 1.28.2.45 -r 1.28.2.46 src/mbox.c;  cvs diff -u -r 1.2.2.7 -r 1.2.2.8 src/common/md5.c;  cvs diff -u -r 1.36.2.164 -r 1.36.2.165 src/common/utils.c;  cvs diff -u -r 1.1.4.108 -r 1.1.4.109 src/etpan/imap-thread.c;  ) > 3.7.0cvs38.patchset
 ( cvs diff -u -r 1.149.2.98 -r 1.149.2.99 src/inc.c;  ) > 3.7.0cvs39.patchset
+( cvs diff -u -r 1.61.2.92 -r 1.61.2.93 src/account.c;  cvs diff -u -r 1.60.2.129 -r 1.60.2.130 src/addressbook.c;  ) > 3.7.0cvs40.patchset
